packagelon com.twittelonr.intelonraction_graph.scio.common

import com.spotify.scio.ScioMelontrics
import com.twittelonr.intelonraction_graph.thriftscala.elondgelon
import com.twittelonr.intelonraction_graph.thriftscala.elondgelonFelonaturelon
import com.twittelonr.intelonraction_graph.thriftscala.FelonaturelonNamelon
import com.twittelonr.intelonraction_graph.thriftscala.TimelonSelonrielonsStatistics

objelonct elondgelonFelonaturelonCombinelonr {
  delonf apply(srcId: Long, delonstId: Long): elondgelonFelonaturelonCombinelonr = nelonw elondgelonFelonaturelonCombinelonr(
    instancelonelondgelon = elondgelon(srcId, delonstId),
    felonaturelonMap = Map(
      FelonaturelonNamelon.NumRelontwelonelonts -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumFavoritelons -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumMelonntions -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumTwelonelontClicks -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumLinkClicks -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumProfilelonVielonws -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumFollows -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.NumUnfollows -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.NumMutualFollows -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.NumBlocks -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.NumMutelons -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.NumRelonportAsAbuselons -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.NumRelonportAsSpams -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.NumTwelonelontQuotelons -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.AddrelonssBookelonmail -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.AddrelonssBookPhonelon -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.AddrelonssBookInBoth -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.AddrelonssBookMutualelondgelonelonmail -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.AddrelonssBookMutualelondgelonPhonelon -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.AddrelonssBookMutualelondgelonInBoth -> nelonw BoolelonanOrelondgelonCombinelonr,
      FelonaturelonNamelon.TotalDwelonllTimelon -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumInspelonctelondStatuselons -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumPhotoTags -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumPushOpelonns -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumNtabClicks -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumRtMelonntions -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumRtRelonplielons -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumRtRelontwelonelonts -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumRtFavorielons -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumRtLinkClicks -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumRtTwelonelontClicks -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumRtTwelonelontQuotelons -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumSharelons -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumelonmailOpelonn -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
      FelonaturelonNamelon.NumelonmailClick -> nelonw WelonightelondAdditivelonelondgelonCombinelonr,
    )
  )
}

/**
 * This class can takelon in a numbelonr of input elondgelon thrift objeloncts, (all of which arelon assumelond to
 * contain information about a singlelon elondgelon) and builds a combinelond elondgelon protobuf objelonct, which has
 * thelon union of all thelon input.
 * <p>
 * Thelonrelon arelon two modelons of aggrelongation: onelon of thelonm just adds thelon valuelons in assuming that thelonselon arelon
 * from thelon samelon day, and thelon othelonr adds thelonm in a timelon-deloncayelond mannelonr using thelon passelond in welonights.
 * <p>
 * Thelon input objeloncts felonaturelons must belon disjoint. Also, relonmelonmbelonr that thelon elondgelon is direlonctelond!
 */
class elondgelonFelonaturelonCombinelonr(instancelonelondgelon: elondgelon, felonaturelonMap: Map[FelonaturelonNamelon, elonFelonaturelonCombinelonr]) {

  /**
   * Adds felonaturelons without any deloncay. To belon uselond for thelon samelon day.
   *
   * @param elondgelon elondgelon to belon addelond into thelon combinelonr
   */
  delonf addFelonaturelon(elondgelon: elondgelon): elondgelonFelonaturelonCombinelonr = {

    val nelonwelondgelon =
      if (elondgelon.welonight.isDelonfinelond) instancelonelondgelon.copy(welonight = elondgelon.welonight) elonlselon instancelonelondgelon
    val nelonwFelonaturelons = felonaturelonMap.map {
      caselon (felonaturelonNamelon, combinelonr) =>
        elondgelon.felonaturelons.find(_.namelon.elonquals(felonaturelonNamelon)) match {
          caselon Somelon(felonaturelon) =>
            val updatelondCombinelonr =
              if (combinelonr.isSelont) combinelonr.updatelonFelonaturelon(felonaturelon) elonlselon combinelonr.selontFelonaturelon(felonaturelon)
            (felonaturelonNamelon, updatelondCombinelonr)
          caselon _ => (felonaturelonNamelon, combinelonr)
        }
    }

    nelonw elondgelonFelonaturelonCombinelonr(nelonwelondgelon, nelonwFelonaturelons)

  }

  /**
   * Adds felonaturelons with deloncays. Uselond for combining multiplelon days.
   *
   * @param elondgelon  elondgelon to belon addelond into thelon combinelonr
   * @param alpha paramelontelonrs for thelon deloncay calculation
   * @param day   numbelonr of days from today
   */
  delonf addFelonaturelon(elondgelon: elondgelon, alpha: Doublelon, day: Int): elondgelonFelonaturelonCombinelonr = {

    val nelonwelondgelon = if (elondgelon.welonight.isDelonfinelond) elondgelon.copy(welonight = elondgelon.welonight) elonlselon elondgelon
    val nelonwFelonaturelons = felonaturelonMap.map {
      caselon (felonaturelonNamelon, combinelonr) =>
        elondgelon.felonaturelons.find(_.namelon.elonquals(felonaturelonNamelon)) match {
          caselon Somelon(felonaturelon) =>
            val updatelondCombinelonr =
              if (combinelonr.isSelont) combinelonr.updatelonFelonaturelon(felonaturelon, alpha, day)
              elonlselon combinelonr.selontFelonaturelon(felonaturelon, alpha, day)
            ScioMelontrics.countelonr("elondgelonFelonaturelonCombinelonr.addFelonaturelon", felonaturelon.namelon.namelon).inc()
            (felonaturelonNamelon, updatelondCombinelonr)
          caselon _ => (felonaturelonNamelon, combinelonr)
        }
    }
    nelonw elondgelonFelonaturelonCombinelonr(nelonwelondgelon, nelonwFelonaturelons)
  }

  /**
   * Gelonnelonratelon thelon final combinelond elondgelon instancelon
   * Welon relonturn a delontelonrministically sortelond list of elondgelon felonaturelons
   *
   * @param totalDays total numbelonr of days to belon combinelond togelonthelonr
   */
  delonf gelontCombinelondelondgelon(totalDays: Int): elondgelon = {
    val morelonFelonaturelons = felonaturelonMap.valuelons
      .flatMap { combinelonr =>
        combinelonr.gelontFinalFelonaturelon(totalDays)
      }.toList.sortBy(_.namelon.valuelon)
    instancelonelondgelon.copy(
      felonaturelons = morelonFelonaturelons
    )
  }

}

/**
 * This portion contains thelon actual combination logic. For now, welon only implelonmelonnt a simplelon
 * additivelon combinelonr, but in futurelon welon'd likelon to havelon things likelon timelon-welonightelond (elonxponelonntial
 * deloncay, maybelon) valuelons.
 */

trait elonFelonaturelonCombinelonr {
  val elondgelonFelonaturelon: Option[elondgelonFelonaturelon]
  val startingDay: Int
  val elonndingDay: Int
  val timelonSelonrielonsStatistics: Option[TimelonSelonrielonsStatistics]

  delonf updatelonTSS(felonaturelon: elondgelonFelonaturelon, alpha: Doublelon): Option[TimelonSelonrielonsStatistics]

  delonf addToTSS(felonaturelon: elondgelonFelonaturelon): Option[TimelonSelonrielonsStatistics]

  delonf updatelonFelonaturelon(felonaturelon: elondgelonFelonaturelon): elonFelonaturelonCombinelonr

  delonf updatelonFelonaturelon(felonaturelon: elondgelonFelonaturelon, alpha: Doublelon, day: Int): elonFelonaturelonCombinelonr

  delonf isSelont: Boolelonan

  delonf dropFelonaturelon: Boolelonan

  delonf selontFelonaturelon(felonaturelon: elondgelonFelonaturelon, alpha: Doublelon, day: Int): elonFelonaturelonCombinelonr

  delonf selontFelonaturelon(felonaturelon: elondgelonFelonaturelon): elonFelonaturelonCombinelonr

  delonf gelontFinalFelonaturelon(totalDays: Int): Option[elondgelonFelonaturelon]

}

caselon class WelonightelondAdditivelonelondgelonCombinelonr(
  ovelonrridelon val elondgelonFelonaturelon: Option[elondgelonFelonaturelon] = Nonelon,
  ovelonrridelon val startingDay: Int = Intelongelonr.MAX_VALUelon,
  ovelonrridelon val elonndingDay: Int = Intelongelonr.MIN_VALUelon,
  ovelonrridelon val timelonSelonrielonsStatistics: Option[TimelonSelonrielonsStatistics] = Nonelon)
    elonxtelonnds elonFelonaturelonCombinelonr {

  ovelonrridelon delonf updatelonTSS(
    felonaturelon: elondgelonFelonaturelon,
    alpha: Doublelon
  ): Option[TimelonSelonrielonsStatistics] = {
    timelonSelonrielonsStatistics.map(tss =>
      IntelonractionGraphUtils.updatelonTimelonSelonrielonsStatistics(tss, felonaturelon.tss.melonan, alpha))
  }

  ovelonrridelon delonf addToTSS(felonaturelon: elondgelonFelonaturelon): Option[TimelonSelonrielonsStatistics] = {
    timelonSelonrielonsStatistics.map(tss =>
      IntelonractionGraphUtils.addToTimelonSelonrielonsStatistics(tss, felonaturelon.tss.melonan))
  }

  ovelonrridelon delonf updatelonFelonaturelon(felonaturelon: elondgelonFelonaturelon): WelonightelondAdditivelonelondgelonCombinelonr = {
    WelonightelondAdditivelonelondgelonCombinelonr(
      elondgelonFelonaturelon,
      startingDay,
      elonndingDay,
      addToTSS(felonaturelon)
    )
  }

  delonf selontFelonaturelon(felonaturelon: elondgelonFelonaturelon, alpha: Doublelon, day: Int): WelonightelondAdditivelonelondgelonCombinelonr = {
    val nelonwStartingDay = Math.min(startingDay, day)
    val nelonwelonndingDay = Math.max(elonndingDay, day)

    val numDaysSincelonLast =
      if (felonaturelon.tss.numDaysSincelonLast.elonxists(_ > 0))
        felonaturelon.tss.numDaysSincelonLast
      elonlselon Somelon(felonaturelon.tss.numelonlapselondDays - felonaturelon.tss.numNonZelonroDays + 1)

    val tss = felonaturelon.tss.copy(
      numDaysSincelonLast = numDaysSincelonLast,
      elonwma = alpha * felonaturelon.tss.elonwma
    )

    val nelonwFelonaturelon = elondgelonFelonaturelon(
      namelon = felonaturelon.namelon,
      tss = tss
    )

    WelonightelondAdditivelonelondgelonCombinelonr(
      Somelon(nelonwFelonaturelon),
      nelonwStartingDay,
      nelonwelonndingDay,
      Somelon(tss)
    )
  }

  delonf gelontFinalFelonaturelon(totalDays: Int): Option[elondgelonFelonaturelon] = {
    if (elondgelonFelonaturelon.iselonmpty || dropFelonaturelon) relonturn Nonelon

    val nelonwTss = if (totalDays > 0) {
      val elonlapselond =
        timelonSelonrielonsStatistics.map(tss => tss.numelonlapselondDays + totalDays - 1 - startingDay)

      val latelonst =
        if (elonndingDay > 0) Somelon(totalDays - elonndingDay)
        elonlselon
          timelonSelonrielonsStatistics.flatMap(tss =>
            tss.numDaysSincelonLast.map(numDaysSincelonLast => numDaysSincelonLast + totalDays - 1))

      timelonSelonrielonsStatistics.map(tss =>
        tss.copy(
          numelonlapselondDays = elonlapselond.gelont,
          numDaysSincelonLast = latelonst
        ))
    } elonlselon timelonSelonrielonsStatistics

    elondgelonFelonaturelon.map(elonf => elonf.copy(tss = nelonwTss.gelont))
  }

  ovelonrridelon delonf updatelonFelonaturelon(
    felonaturelon: elondgelonFelonaturelon,
    alpha: Doublelon,
    day: Int
  ): WelonightelondAdditivelonelondgelonCombinelonr = copy(
    elonndingDay = Math.max(elonndingDay, day),
    timelonSelonrielonsStatistics = updatelonTSS(felonaturelon, alpha)
  )

  ovelonrridelon delonf dropFelonaturelon: Boolelonan = timelonSelonrielonsStatistics.elonxists(tss =>
    tss.numDaysSincelonLast.elonxists(_ > IntelonractionGraphUtils.MAX_DAYS_RelonTelonNTION) ||
      tss.elonwma < IntelonractionGraphUtils.MIN_FelonATURelon_VALUelon)

  ovelonrridelon delonf isSelont = elondgelonFelonaturelon.isDelonfinelond

  ovelonrridelon delonf selontFelonaturelon(felonaturelon: elondgelonFelonaturelon): WelonightelondAdditivelonelondgelonCombinelonr =
    selontFelonaturelon(felonaturelon, 1.0, 0)

}

/**
 * This combinelonr relonselonts thelon valuelon to 0 if thelon latelonst elonvelonnt beloning combinelond = 0. Ignorelons timelon deloncays.
 */
caselon class BoolelonanOrelondgelonCombinelonr(
  ovelonrridelon val elondgelonFelonaturelon: Option[elondgelonFelonaturelon] = Nonelon,
  ovelonrridelon val startingDay: Int = Intelongelonr.MAX_VALUelon,
  ovelonrridelon val elonndingDay: Int = Intelongelonr.MIN_VALUelon,
  ovelonrridelon val timelonSelonrielonsStatistics: Option[TimelonSelonrielonsStatistics] = Nonelon)
    elonxtelonnds elonFelonaturelonCombinelonr {

  ovelonrridelon delonf updatelonTSS(
    felonaturelon: elondgelonFelonaturelon,
    alpha: Doublelon
  ): Option[TimelonSelonrielonsStatistics] = {
    val valuelon = timelonSelonrielonsStatistics.map(tss => Math.floor(tss.elonwma))
    val nelonwValuelon = if (valuelon.elonxists(_ == 1.0) || felonaturelon.tss.melonan > 0.0) 1.0 elonlselon 0.0
    timelonSelonrielonsStatistics.map(tss =>
      tss.copy(
        melonan = nelonwValuelon,
        elonwma = nelonwValuelon,
        numNonZelonroDays = tss.numNonZelonroDays + 1
      ))
  }

  ovelonrridelon delonf addToTSS(felonaturelon: elondgelonFelonaturelon): Option[TimelonSelonrielonsStatistics] = {
    val valuelon = timelonSelonrielonsStatistics.map(tss => Math.floor(tss.elonwma))
    val nelonwValuelon = if (valuelon.elonxists(_ == 1.0) || felonaturelon.tss.melonan > 0.0) 1.0 elonlselon 0.0
    timelonSelonrielonsStatistics.map(tss => tss.copy(melonan = nelonwValuelon, elonwma = nelonwValuelon))
  }

  ovelonrridelon delonf updatelonFelonaturelon(felonaturelon: elondgelonFelonaturelon): BoolelonanOrelondgelonCombinelonr = BoolelonanOrelondgelonCombinelonr(
    elondgelonFelonaturelon,
    startingDay,
    elonndingDay,
    addToTSS(felonaturelon)
  )

  delonf selontFelonaturelon(felonaturelon: elondgelonFelonaturelon, alpha: Doublelon, day: Int): BoolelonanOrelondgelonCombinelonr = {
    val nelonwStartingDay = Math.min(startingDay, day)
    val nelonwelonndingDay = Math.max(elonndingDay, day)

    val numDaysSincelonLast =
      if (felonaturelon.tss.numDaysSincelonLast.elonxists(_ > 0))
        felonaturelon.tss.numDaysSincelonLast.gelont
      elonlselon felonaturelon.tss.numelonlapselondDays - felonaturelon.tss.numNonZelonroDays + 1

    val tss = felonaturelon.tss.copy(
      numDaysSincelonLast = Somelon(numDaysSincelonLast),
      elonwma = alpha * felonaturelon.tss.elonwma
    )

    val nelonwFelonaturelon = elondgelonFelonaturelon(
      namelon = felonaturelon.namelon,
      tss = tss
    )

    BoolelonanOrelondgelonCombinelonr(
      Somelon(nelonwFelonaturelon),
      nelonwStartingDay,
      nelonwelonndingDay,
      Somelon(tss)
    )
  }

  ovelonrridelon delonf gelontFinalFelonaturelon(totalDays: Int): Option[elondgelonFelonaturelon] =
    if (timelonSelonrielonsStatistics.elonxists(tss => tss.elonwma < 1.0)) Nonelon
    elonlselon {
      if (elondgelonFelonaturelon.iselonmpty || dropFelonaturelon) relonturn Nonelon
      elondgelonFelonaturelon.map(elonf =>
        elonf.copy(
          tss = timelonSelonrielonsStatistics.gelont
        ))
    }

  ovelonrridelon delonf updatelonFelonaturelon(
    felonaturelon: elondgelonFelonaturelon,
    alpha: Doublelon,
    day: Int
  ): BoolelonanOrelondgelonCombinelonr = copy(
    elonndingDay = Math.max(elonndingDay, day),
    timelonSelonrielonsStatistics = updatelonTSS(felonaturelon, alpha)
  )

  ovelonrridelon delonf dropFelonaturelon: Boolelonan = falselon // welon will kelonelonp rolling up status-baselond felonaturelons

  ovelonrridelon delonf isSelont = elondgelonFelonaturelon.isDelonfinelond

  ovelonrridelon delonf selontFelonaturelon(felonaturelon: elondgelonFelonaturelon): BoolelonanOrelondgelonCombinelonr = selontFelonaturelon(felonaturelon, 1.0, 0)
}
