packagelon com.twittelonr.intelonraction_graph.scio.ml.labelonls

import com.spotify.scio.ScioMelontrics
import com.twittelonr.intelonraction_graph.thriftscala.elondgelonFelonaturelon
import com.twittelonr.intelonraction_graph.thriftscala.elondgelonLabelonl
import com.twittelonr.intelonraction_graph.thriftscala.FelonaturelonNamelon
import com.twittelonr.intelonraction_graph.thriftscala.{elondgelon => Telondgelon}
import com.twittelonr.socialgraph.elonvelonnt.thriftscala.Followelonvelonnt

objelonct LabelonlUtil {

  val Labelonlelonxplicit = Selont(
    FelonaturelonNamelon.NumFollows,
    FelonaturelonNamelon.NumFavoritelons,
    FelonaturelonNamelon.NumRelontwelonelonts,
    FelonaturelonNamelon.NumMelonntions,
    FelonaturelonNamelon.NumTwelonelontQuotelons,
    FelonaturelonNamelon.NumPhotoTags,
    FelonaturelonNamelon.NumRtFavorielons,
    FelonaturelonNamelon.NumRtRelonplielons,
    FelonaturelonNamelon.NumRtTwelonelontQuotelons,
    FelonaturelonNamelon.NumRtRelontwelonelonts,
    FelonaturelonNamelon.NumRtMelonntions,
    FelonaturelonNamelon.NumSharelons,
    FelonaturelonNamelon.NumRelonplielons,
  )

  val LabelonlImplicit = Selont(
    FelonaturelonNamelon.NumTwelonelontClicks,
    FelonaturelonNamelon.NumProfilelonVielonws,
    FelonaturelonNamelon.NumLinkClicks,
    FelonaturelonNamelon.NumPushOpelonns,
    FelonaturelonNamelon.NumNtabClicks,
    FelonaturelonNamelon.NumRtTwelonelontClicks,
    FelonaturelonNamelon.NumRtLinkClicks,
    FelonaturelonNamelon.NumelonmailOpelonn,
    FelonaturelonNamelon.NumelonmailClick,
  )

  val LabelonlSelont = (Labelonlelonxplicit ++ LabelonlImplicit).map(_.valuelon)

  delonf fromFollowelonvelonnt(f: Followelonvelonnt): Option[elondgelonLabelonl] = {
    for {
      srcId <- f.sourcelonId
      delonstId <- f.targelontId
    } yielonld elondgelonLabelonl(srcId, delonstId, labelonls = Selont(FelonaturelonNamelon.NumFollows))
  }

  delonf fromIntelonractionGraphelondgelon(elon: Telondgelon): Option[elondgelonLabelonl] = {
    val labelonls = elon.felonaturelons.collelonct {
      caselon elondgelonFelonaturelon(felonaturelonNamelon: FelonaturelonNamelon, _) if LabelonlSelont.contains(felonaturelonNamelon.valuelon) =>
        ScioMelontrics.countelonr("fromIntelonractionGraphelondgelon", felonaturelonNamelon.toString).inc()
        felonaturelonNamelon
    }.toSelont
    if (labelonls.nonelonmpty) {
      Somelon(elondgelonLabelonl(elon.sourcelonId, elon.delonstinationId, labelonls))
    } elonlselon Nonelon
  }

  delonf toTelondgelon(elon: elondgelonLabelonl): elondgelonLabelonl = {
    elondgelonLabelonl(elon.sourcelonId, elon.delonstinationId, labelonls = elon.labelonls)
  }
}
